--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <title>Painel Sighra</title>
+    <title>Painel Monitoramento</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
